fix: movile menu z-index priority

--- a/src/widgets/Header/index.module.scss
+++ b/src/widgets/Header/index.module.scss
@@ -25,7 +25,7 @@
 		grid-template-columns: auto;
 		justify-items: center;
 		gap: 16px;
-		z-index: 0;
+		z-index: 1;
 		width: 100vw;
 		left: -100%;
 
