--- a/src/widgets/Header/ui/Burger/index.module.scss
+++ b/src/widgets/Header/ui/Burger/index.module.scss
@@ -6,7 +6,7 @@
 	@include lg {
 		cursor: pointer;
 		position: relative;
-		z-index: 1;
+		z-index: 2;
 		display: block;
 		width: 26.67px;
 		height: 18.66px;
